z-index header fix

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header{
     width: 100%;
     position: fixed;
     margin: 0 auto;
+    z-index: 999;
 }
 
 header.scrolled{
